# peridot

./: README.md  meson.build
src/: main.py  meson.build  peridot.in
